--- a/app.json
+++ b/app.json
@@ -25,6 +25,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9571b198-3b19-422d-b9f7-3c305667bf38"
+      }
     }
   }
 }
