--- a/package.json
+++ b/package.json
@@ -9,10 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.5",
+    "date-fns": "^3.6.0",
+    "expo": "^51.0.10",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.7",
+    "expo-permissions": "~14.2.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.74.1",
+    "react-native-calendars": "^1.1303.0",
+    "react-native-date-picker": "^5.0.4",
+    "react-native-elements": "^3.4.3",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-maps": "1.14.0",
+    "react-native-material-dropdown-v2-fixed": "^0.11.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-paper": "^5.12.1",
+    "react-native-permissions": "^4.0.4",
+    "react-native-select-dropdown": "^4.0.1",
+    "react-navigation": "^5.0.0",
+    "react-navigation-header-buttons": "^11.1.1",
+    "@babel/core": "^7.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
